Fix separator positioning in app menu dropdown in RTL.

See bug for details.

BUG=655555
TEST=Launch Chrome with --lang=he, click app button, and make sure zoom menu area looks like the mirror image of the LTR version.

Review-Url: https://codereview.chromium.org/2448903002
Cr-Commit-Position: refs/heads/master@{#427439}

Former-commit-id: 200957be2c524036da93b36b69360f8d4ed83c81